# aist_lenti_mark

./: CMakeLists.txt  nodelet_description.xml  package.xml  plugin_description.xml  textured_quad_display_plugin_description.xml
Data/CameraParams/: Logicool640480.txt
config/CameraParams/: Logicool1280720.txt  Logicool19201080S.txt
config/MarkerParams/: marker94Para.yml  markerPara.yml  markerParaDXMasterA09.yml  markerParams.yml
include/lenti_mark/: lenti_mark.h
launch/: lenti_mark.launch  lenti_mark_webcam.launch  lenti_mark_webcam_AL.launch  live_camera.launch  live_camera.rviz  realsense.launch  realsense.rviz  ros_sample.launch  ros_sample_AL.launch  run.launch  usb_cam.launch  usb_cam.rviz  usb_camera.launch  usb_camera.rviz  uvc_camera.launch
msg/: Marker.msg  Markers.msg  QuadStamped.msg  TexturedMeshStamped.msg  marker.msg  markers.msg
scripts/: quad_generator.py
src/: aist_lenti_mark.cpp  get_screen_corners.cpp  image_projector.cpp  lenti_mark.cpp  textured_mesh_display.cpp  textured_mesh_display.h  textured_quad_display.cpp  textured_quad_display.h
